--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	  <li><strong>SLEEMY FC (Oyelade Samsudeen)</strong> – 8th place, but #1 in vibes and emotional support for others.</li>
 	  <li><strong>High Tension⚡️ (Mayowa O’tobiloba)</strong> – Not only league winner, but also took home the <strong>FPL All Stars Trophy</strong> 🏆. Man’s collecting silverware like he's Pep.</li>
 	  <li><strong>Rammy Firelords (Babatunde Onasanya)</strong> – Grabbed the <strong>Royals Cup</strong> 🏆. Fire on and off the pitch!</li>
-	  <li><strong>Peace</strong> – Winner of the <strong>SBL Cup</strong> 🏆. Quiet name, deadly manager.</li>
-	  <li><em>🫣 No Arsenal fans in the top 5 — not surprising really. Just like their football club in real life… all hype, no trophies. Maybe next year, lads.</em></li>
+	  <li><strong>FANTASY 11 (Olabanji David)</strong> – Won the <strong>SBL Cup</strong> 🏆 but still got relegated. Cup in one hand, tears in the other. </li>
+	  <li><em> No Arsenal fans in the top 5 not surprising really. Just like their football club in real life… all hype, no trophies. Maybe next year, lads.</em></li>
 	</ul>
 	
 	<h2>✈️ Relegations – Time to Pack Your Bags, Lads</h2>
@@ -64,7 +64,7 @@
 	  <li><strong>MACKCAMS FC</strong> (Mackson Charles) – The Mac is back and Premier League ready.</li>
 	  <li><strong>Orhlarmz D FC</strong> (Oladotun Adedayo) – From unknown to unstoppable.</li>
 	  <li><strong>BluesFC</strong> (Idris Oshin) – The only blue that didn’t bottle the season.</li>
-	  <li><strong>YungChaLee</strong> (Yung Cha Lee) – Promoted with vibes and a 3.5M OR.</li>
+	  <li><strong>YungChaLee</strong> (Yung Cha Lee) – Promoted with vibes.</li>
 	  <li><strong>WesleyFC</strong> (Daniel Wabara) – He’s in. He’s Wesley. He’s ready.</li>
 	  <li><strong>SDRAGON FC</strong> (Oluwaranti Ilesanmi) – Breathed fire on the Championship. Roars into the Royals.</li>
 	</ul>
